create and configure structure at details heroes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_heroes_fragment">Heroes</string>
     <string name="title_favorites_fragment">Favorites</string>
     <string name="title_about_fragment">About</string>
+    <string name="title_comics">Comics</string>
 
     <string name="tools_sample_name_heroes">Scarlet Witch</string>
 
