finish feature screen show heroes favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="error_loading_data">Houve um erro ao tentar carregar os dados!</string>
     <string name="error_network">Houve um erro com sua conexão a internet!</string>
     <string name="error_server">Houve um erro inesperado! tente mais tarde</string>
-    <string name="error_loading_dat_empty_data">Não foi encontrado resultados!</string>
+    <string name="error_loading_data_empty_data">Não foi encontrado resultados!</string>
+    <string name="error_loading_favorite_heros_empty">Não foi encontrado heróis favoritados!</string>
     <string name="try_again_loading">Tente novamente</string>
     <string name="error_loading_page_heroes">Houve um erro ao tentar carregar heróis da proxima página. Tente novamente</string>
 
