--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_menu_heroes">Heroes</string>
     <string name="app_menu_favorites">Favorites</string>
     <string name="app_menu_about">About</string>
+    <string name="item_menu_sort">Sort</string>
 
     <string name="title_heroes_fragment">Heroes</string>
     <string name="title_favorites_fragment">Favorites</string>
@@ -25,4 +26,12 @@
     <string name="details_events_category">Events</string>
     <string name="error_save_hero_local_database">Não foi possivel salvar o heroi no banco de dados!</string>
     <string name="error_check_hero_local_database">Não foi possivel checar o heroi no banco de dados!</string>
+
+    <string name="txt_order_by_title_dialog_fragment">Ordernar por</string>
+    <string name="txt_order_by_options_dialog_fragment">Exibir em ordem</string>
+    <string name="order_button">Ordenar</string>
+    <string name="ordey_by_name">Nome</string>
+    <string name="ordey_by_growing">Crescente</string>
+    <string name="ordey_by_descending">Decrescente</string>
+    <string name="ordey_by_modified">Modificado</string>
 </resources>
