feat: Otimizando feature de pesquisar herois e corrigindo testes unitários

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_menu_favorites">Favorites</string>
     <string name="app_menu_about">About</string>
     <string name="item_menu_sort">Sort</string>
+    <string name="item_menu_search">Search</string>
 
     <string name="title_heroes_fragment">Heroes</string>
     <string name="title_favorites_fragment">Favorites</string>
